Sat Dec 11 05:48:28 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/multi-tk.rb: infinite loop on method_missing at loading.
	  [ruby-dev:42716] [Ruby 1.9-Bug#4129]

	* ext/tk/lib/multi-tk.rb: when no eventloop is running, ruby freezes at exit.

Sat Dec 11 02:23:15 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/openssl/extconf.rb: try pkgconfig first, then fall back to
	  normal have_library, etc.  Thanks Erik Hollensbe. [ruby-core:32406]

Fri Dec 10 22:33:39 2010  Tanaka Akira  <akr@fsij.org>

	* dln_find.c: parenthesize macro arguments.

Fri Dec 10 20:05:42 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* template/id.h.tmpl (ruby_method_ids): suppress warnings.
	  [ruby-dev:42730]

Fri Dec 10 18:29:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (ruby_init_loadpath_safe): relatively called non-shared
	  binary cannot be found in PATH, so use given pathname.

Fri Dec 10 18:28:40 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cygwin/GNUmakefile.in (SCRIPTPROGRAMS): ignore backup files and etc.

	* cygwin/GNUmakefile.in (scriptbin): set executable bit.

	* tool/rbinstall.rb (install_recursive): always skip default ignored
	  files.  if block is given, call it instead of calling install.

	* tool/rbinstall.rb (bin-comm): use install_recursive.

Fri Dec 10 18:12:31 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/mkmf/base.rb (TestMkmf#config_value): extract macro value from
	  config.h.

	* test/mkmf/test_sizeof.rb (TestMkmf::TestSizeof#test_sizeof_builtin),
	 (TestMkmf::TestSizeof#test_sizeof_struct): more tests.

	* lib/mkmf.rb (check_signedness): should use the prelude code.
	  [ruby-dev:42731]

	* lib/mkmf.rb (Logging.log_close): separate from Logging.logfile.

	* test/mkmf/base.rb (TestMkmf::MKMFLOG): show mkmf.log at failures.

	* test/mkmf/base.rb (TestMkmf#teardown): close log file for each tests.

Fri Dec 10 11:36:43 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
